# 67312-C-and-Cpp

ex1/: CMakeLists.txt  README.md  cipher.c  main.c  submit.ps1  tests.c
ex2/: CMakeLists.txt  ProductBST.c  README.md  employee_linked_list_example.c  employee_linked_list_example.h  patch to paste in ProductBST.c  submit.ps1  try.c
ex2/oh_tests/: oh_tests_helpers.c  oh_tests_helpers.h  products.txt
ex3.a/: CMakeLists.txt  Makefile  README.md  linked_list.c  main.c  markov_chain.c  markov_chain.h  submit.ps1  test_valgrind.ps1  tweets_generator.c
ex3.a/oh_tests/: oh_tests.c  oh_tests_helpers.c  oh_tests_helpers.h
ex3.b/: CMakeLists.txt  README.md  _conitues_tweets_generator.c  _new_generic_type.c  justdoit_tweets_s.txt  linked_list.c  main.c  makefile  markov_chain.c  markov_chain.h  orel.cpp  snakes_and_ladders.c  submit.ps1  test_valgrind.ps1  tweets_generator.c
ex3.b/oh_tests/: dots.txt  dots_s.txt  new_generic_type  test_ex3.b.py  test_ex3.b_s.py
ex4/: .gitignore  Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Makefile  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  oh_tests_const.cpp  oh_tests_exceptions.cpp  presubmit.cpp  submit.ps1  try.cpp
ex5/: CMakeLists.txt  Movie.cpp  Movie.h  README.md  RSUser.cpp  RSUser.h  RSUsersLoader.cpp  RSUsersLoader.h  RecommenderSystem.cpp  RecommenderSystem.h  RecommenderSystemLoader.cpp  RecommenderSystemLoader.h  presubmit.cpp  print_main.cpp  submit.ps1  test_valgrind.ps1  try.cpp
ex6/: CMakeLists.txt  Dictionary.hpp  HashMap.hpp  README.md  c_tests.c  main.cpp  oh_tests.cpp  output.txt  submit.ps1  test2  test_valgrind.ps1  try.cpp
ex6/io/: TestAST_1.info  TestAST_1.match
ex6/srcs/: Presubmit.hpp
ex6/tests/: test_ex6.cpp  tests_ex6_suchetzky.cpp
